fix light mode issue

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="hero__footer">
-          <div class="hero__CTA hero__CTA--mr24 hero__CTA--order10">
+          <div class="hero__CTA hero__CTA--arrow hero__CTA--mr24 hero__CTA--order10">
             <img
               src="public/icon/arrow-down.png"
               alt=""
