fix minor issues

--- a/index.html
+++ b/index.html
@@ -441,6 +441,9 @@
       </section>
       <!-- offer section -->
       <section class="section section--flex-col">
+        <h2 class="section__heading section__heading--alt-order mobile-only">
+          Exclusive Offer
+        </h2>
         <div class="section__banner banner">
           <img
             src="public/img/headphone-circle.png"
@@ -450,7 +453,7 @@
           <div class="banner__flag">20% off</div>
           <div class="offer__flag"></div>
         </div>
-        <h2 class="section__heading section__heading--alt-order">
+        <h2 class="section__heading section__heading--alt-order desktop-only">
           Exclusive Offer
         </h2>
         <div class="section__main">
