Edit sass folder structure.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="container container--dark">
       <header class="hero">
-        <div class="hero__search search">
+        <div class="hero__search search mobile-only">
           <img src="public/icon/dark-search.png" alt="" class="search__icon" />
           <input
             type="text"
