Fix validation error

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <img src="public/icon/dark-search.png" alt="" class="search__icon" />
           <input
             type="text"
-            name=""
-            id=""
+            name="search__field"
+            id="search__field"
             placeholder="Search"
             class="search__field"
           />
@@ -106,7 +106,7 @@
           <div
             class="hero__CTA hero__CTA--arrow hero__CTA--mr24 hero__CTA--order10"
           >
-            <a href="#trends" className="">
+            <a href="#trends" >
               <img
                 src="public/icon/arrow-down.png"
                 alt=""
@@ -913,16 +913,16 @@
               </h6>
               <ul class="stack__list list list--footer-navs list--no-decor">
                 <li class="stack stack__link stack--g32">
-                  <a href="" className=""
+                  <a href="" 
                     ><img
                       src="public/icon/google.png"
                       alt=""
                       class="list__logo"
                   /></a>
-                  <a href="" className=""
+                  <a href=""
                     ><img src="public/icon/insta.png" alt="" class="list__logo"
                   /></a>
-                  <a href="" className=""
+                  <a href=""
                     ><img
                       src="public/icon/twitter.png"
                       alt=""
@@ -944,6 +944,6 @@
         </div>
       </footer>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
