fix text color, add utility class text-white

--- a/index.html
+++ b/index.html
@@ -783,10 +783,10 @@
           <!-- <div class="container__qr">
           </div> -->
           <div class="section__header">
-            <h2 class="section__heading section__heading--md">
+            <h2 class="section__heading section__heading--md text-white" >
               Scan QR code for more
             </h2>
-            <p class="section__subheading section__subheading--sm">
+            <p class="section__subheading section__subheading--sm text-white">
               Now you can download the official musify app.
             </p>
             <div
